2011-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Add [slots] argument to amtape show.
	* man/xml-source/amtape.8.xml: Document it.

2011-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Disable the service_path if it is set to an empty
	  string or '/', also remove trailing slash.

2011-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: Log a 'START planner date' line on error'.

2011-11-15  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Use curl_easy_escape.

2011-11-15  Jean-Louis Martineau <martineau@zmanda.com>
	* amplot/Makefile.am, application-src/Makefile.am,
	  client-src/Makefile.am, common-src/Makefile.am,
	  device-src/Makefile.am, server-src/Makefile.am: Add $(SCRIPTS_PERL)
	  $(SCRIPTS_SHELL) and $(SCRIPTS_AWK) to CLEANFILES.
	  Add config.log to DISTCLEANFILES.
	* installcheck/Makefile.am: Add $(all_tests) $(mocks)
	  $(noinst_SCRIPTS) to CLEANFILES. Add config.log to DISTCLEANFILES
	  (installcheck-local): Remove $(CONFIG_DIR)/amanda-client.conf,
	  $(CONFIG_DIR)/template.d/dumptypes and
	  $(CONFIG_DIR)/template.d/tapetypes is they were not present.

2011-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Fix for fc16.

2011-11-10  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/mock/mtx.pl: Fix qw.

2011-11-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Use Getopt::Long

2011-11-10  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Use CURLOPT_MAX_RECV_SPEED_LARGE.

2011-11-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Logfile.pod: Remove match_* functions
	* perl/Amanda/Logfile.swg: Remove match_* functions
	* perl/Amanda/Util.pod: Add match_* functions
	* perl/Amanda/Util.swg: Add match_* functions
	* client-src/amdump_client.pl, perl/Amanda/DB/Catalog.pm,
	  server-src/amdumpd.pl, server-src/amidxtaped.pl,