@@ -1,4 +1,8 @@
 2011-11-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amreport.pl: Check if executable before open3().
+	* installcheck/amreport.pl: Fix for new message.
+
+2011-11-21  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amtape.pl: Add [slots] argument to amtape show.
 	* man/xml-source/amtape.8.xml: Document it.
 
